# CS759-Final-Project

./: .gitignore  ArbitrageDetector.hpp  CsvParser.hpp  ForexGraph.hpp  Makefile  PositionsManager.hpp  README.md  TimeSeriesArbitrageDetector.hpp  arbitrage  main.cpp
data/ask/: AUDCAD_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv  AUDJPY_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv  EURGBP_ASK.csv  EURJPY_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv  EURUSD_ASK.csv  GBPAUD_ASK.csv  GBPJPY_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv  GBPUSD_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv  SGDJPY_Candlestick_1_s_ASK_25.03.2025-25.03.2025.csv
data/bid/: AUDJPY_BID.csv  AUDUSD_Candlestick_1_s_BID_25.03.2025-25.03.2025.csv  CADJPY_BID.csv  EURGBP_BID.csv  EURUSD_BID.csv  GBPCAD_BID.csv  GBPJPY_BID.csv  USDCAD_BID.csv
project-root/: CMakeLists.txt  README.md  main.cpp
project-root-parallel/: Makefile  README.md  benchmark  benchmark.cpp  benchmark_results.csv  generate_plots.py  main.cpp
project-root-parallel/benchmarks/: README.md
project-root-parallel/include/: ArbitrageDetector.hpp  CsvParser.hpp  ForexGraph.hpp  PositionsManager.hpp  TimeSeriesArbitrageDetector.hpp  Timer.hpp
project-root-parallel/scripts/: README.md
project-root-parallel/src/: ArbitrageDetector.cpp  CsvParser.cpp  ForexGraph.cpp  PositionsManager.cpp  TimeSeriesArbitrageDetector.cpp  Timer.cpp
project-root-parallel/tests/: README.md
project-root-sequential/: CMakeLists.txt  Makefile  README.md  main.cpp
project-root-sequential/data/ask/: AUDUSD_ASK.csv  CADJPY_ASK.csv  EURSGD_ASK.csv  GBPCAD_ASK.csv  USDSGD_ASK.csv
project-root-sequential/data/bid/: AUDCAD_BID.csv  AUDSGD_BID.csv  EURAUD_BID.csv  GBPAUD_BID.csv  USDJPY_BID.csv
project-root-sequential/include/: ArbitrageDetector.hpp  CsvParser.hpp  ForexGraph.hpp  PositionsManager.hpp  TimeSeriesArbitrageDetector.hpp  Timer.hpp
project-root-sequential/output/: README.md
project-root-sequential/src/: ArbitrageDetector.cpp  CsvParser.cpp  ForexGraph.cpp  PositionsManager.cpp  TimeSeriesArbitrageDetector.cpp  Timer.cpp
project-root/data/ask/: AUDSGD_ASK.csv  EURAUD_ASK.csv  EURCAD_ASK.csv
project-root/data/bid/: EURJPY_BID.csv  EURSGD_BID.csv  GBPUSD_BID.csv
project-root/include/: ArbitrageDetector.hpp  CsvParser.hpp  ForexGraph.hpp  PositionsManager.hpp  TimeSeriesArbitrageDetector.hpp
project-root/src/: ArbitrageDetector.cpp  CsvParser.cpp  ForexGraph.cpp  PositionsManager.cpp  TimeSeriesArbitrageDetector.cpp
